Task control creation added and security config implementation